--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Plag Checker</title>
-
-
 	<!-- Library -->
-	<style>
-		#loading {
-    background: url(../img/spinner.gif) no-repeat center center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 9999999;
-}
-	</style>
 	
 	<link rel="stylesheet" href="lib/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="lib/icheck-bootstrap/icheck-bootstrap.min.css">
@@ -39,7 +26,7 @@
 		<div class="navbar-nav sl-auto">
 			<a href="index.html" class="brand-link">
 				<img src="img/product-hunt-brands.svg" class="brand-image img-circle elevation-3" style="width: 34px;">
-				<span class="brand-text" style="color: black; font-weight: bolder;" href="index.html">Plag Checker</span>
+				<span class="brand-text" style="color: black; font-weight: bolder;" href="intro.html">Plag Checker</span>
 			</a>
 		</div>
 	
