--- a/home-upload.html
+++ b/home-upload.html
@@ -55,7 +55,7 @@
 	<aside class="main-sidebar elevation-4 sidebar-light-purple">
 		<a href="#" class="brand-link navbar-light">
 			<img src="img/product-hunt-brands.svg" class="brand-image img-circle elevation-3" style="width: 34px;">
-			<span class="brand-text font-weight-light" href="index.html">Plag Checker</span>
+			<span class="brand-text font-weight-light" href="intro.html">Plag Checker</span>
 		</a>
 
 		<div class="sidebar">
