--- a/home-text.html
+++ b/home-text.html
@@ -55,9 +55,9 @@
 
 
 	<aside class="main-sidebar elevation-4 sidebar-light-purple">
-		<a href="#" class="brand-link navbar-light">
+		<a  href="intro.html" class="brand-link navbar-light">
 			<img src="img/product-hunt-brands.svg" class="brand-image img-circle elevation-3" style="width: 34px;">
-			<span class="brand-text font-weight-light" href="intro.html">Plag Checker</span>
+			<span class="brand-text font-weight-light">Plag Checker</span>
 		</a>
 
 		<div class="sidebar">
