--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<nav class="navbar navbar-expand navbar-white navbar-light">
 	
 		<div class="navbar-nav sl-auto">
-			<a href="index.html" class="brand-link">
+			<a href="intro.html" class="brand-link">
 				<img src="img/product-hunt-brands.svg" class="brand-image img-circle elevation-3" style="width: 34px;">
-				<span class="brand-text" style="color: black; font-weight: bolder;" href="intro.html">Plag Checker</span>
+				<span class="brand-text" style="color: black; font-weight: bolder;">Plag Checker</span>
 			</a>
 		</div>
 	
