--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 		<hr>
 		<!-- how to use -->
 		<div class="container-fluid justify-content-end card"> 
-		<div class="card-body text-light text-right" style="list-style-type: none;font-size: larger; background-image:url(img/detect.jpg);  background-repeat: no-repeat; background-position: left; background-size: contain;">
-			<h2 style="box-shadow: black; font-weight: bolder; font-size:50px;color: black;"><span style="color:rgb(247, 189, 14)">How To </span>Use..</h2>
+			<div class="card-body text-dark text-right" style="list-style-type: none;font-size: larger; background-image:url(img/detect.jpg);  background-repeat: no-repeat; background-position: left; background-size: contain;">
+				<div style="box-shadow: black; background-color: rgba(255, 255, 255, 0.799); font-weight: bolder; font-size:50px;color: black;"><h2 style="color:rgb(247, 189, 14); font-weight: bolder; font-size:50px; ">How To <span style="color: black;">Use..</span></h2>
 			<hr>
-			
-		<h5 class="card-text">
-			
-		</h5>
-		<hr>
-		
+			<h5 class="card-text" style="font-size: x-large; margin: 1%;">
+				This software is very helpful and easy to use. There are many ways to check your content for originality, you can upload your content and check if the content is original or not, you can also paste your content directly on the plagiarism software.
+			</h5>
+			<hr>
+			<a href="home-upload.html" class="btn btn-warning btn-lg" style="color: rgb(255, 255, 255);">Upload File <i class="fa fa-upload"></i> </a>
+			</div>
 		</div>
 	</div>
 
