--- a/intro.html
+++ b/intro.html
@@ -40,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed('.auto-input', {
-          strings: ['Plagiarism Detector', '100% Free', 'AI powered tool'], 
+          strings: ['100% Free', 'AI powered', 'Text-Based','Plagarism','Detector'], 
           typeSpeed: 100,
           backSpeed: 100,
           loop: true
