--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div style="box-shadow: black; background-color: rgba(255, 255, 255, 0.799); font-weight: bolder; font-size:50px;color: black;"><h2 style="color:rgb(247, 189, 14); font-weight: bolder; font-size:50px; ">How To <span style="color: black;">Use..</span></h2>
 			<hr>
 			<h5 class="card-text" style="font-size: x-large; margin: 1%;">
-				This software is very helpful and easy to use. There are many ways to check your content for originality, you can upload your content and check if the content is original or not, you can also paste your content directly on the plagiarism software.
+				Plag Checker is very helpful and easy to use. There are many ways to check your content for originality, you can upload your content and check if the content is original or not, you can also paste your content directly to check plagiarism.
 			</h5>
 			</div><hr>
 			<a href="home-upload.html" class="btn btn-warning btn-lg" style="color: rgb(255, 255, 255);">Upload File <i class="fa fa-upload"></i> </a>
